# Garagem_99

./: .gitignore  db.sqlite3  pyproject.toml
Garagem_99/: admin.py  apps.py  models.py  serializers.py  views.py
Garagem_99/migrations/: 0001_initial.py  0002_marca.py  0002_veiculo_foto.py  0003_acessorio_cor_veiculo.py  0003_rename_foto_veiculo_capa.py  0004_rename_acessorio_acessório_rename_cor_core_and_more.py  0004_rename_cessorio_veiculo_acessorio.py  0005_remove_veiculo_capa_veiculo_capa.py  0005_rename_core_cor_alter_cor_options.py  0006_rename_acessório_acessorio_rename_veículo_veiculo_and_more.py  0006_veiculo_descricao.py  0007_remove_veiculo_acessorio_veiculo_acessorio.py
Garagem_99/models/: acessorio.py  cor.py  marca.py  modelo.py  veiculo.py
Garagem_99/serializers/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
Garagem_99/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
